--- a/css/style.css
+++ b/css/style.css
@@ -319,3 +319,127 @@ html {
 .checklist {
   background-image: url(../img/checkstatus.svg);
 }
+/*  */
+/*  */
+/*  */
+/*  */
+/* сапйдбар */
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 320px;
+  overflow-y: auto;
+  background: #ffffff;
+  box-shadow: 16px 0px 52px rgba(14, 24, 80, 0.2);
+  transition: 0.3s;
+  transform: translateX(0%);
+  /* transform: translateX(-100%); */
+  padding: 24px;
+}
+
+.top-btn__list {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.top-btn__item--margin-auto {
+  margin-right: auto;
+}
+
+.middle-btn {
+  padding-top: 50px;
+}
+
+.middle-btn__list {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.middle-btn__item {
+  cursor: pointer;
+  padding: 8px;
+  border-radius: 4px;
+  transition: 0.05s ease-in-out;
+}
+
+.middle-btn__item:hover {
+  background-color: rgba(14, 24, 80, 0.2);
+}
+
+.middle-btn__link:active, /* активная/посещенная ссылка */
+.middle-btn__link:hover,  /* при наведении */
+.middle-btn__link {
+  text-decoration: none;
+  color: #666;
+}
+
+.bottom-btn {
+  margin-top: auto;
+}
+
+.group__list {
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  padding-bottom: 16px;
+}
+
+.email {
+  display: block;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: -0.2px;
+  color: #000;
+  text-decoration: none;
+}
+
+.phone {
+  display: block;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 32px;
+  letter-spacing: -0.6px;
+  color: #000;
+  text-decoration: none;
+  padding-bottom: 16px;
+}
+
+.lang__list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.lang__item {
+  display: inline;
+}
+
+.lang__button {
+  background-color: rgba(14, 24, 80, 0);
+  border: none;
+  padding: 8px;
+  opacity: 0.5;
+  transition: all 0.1s ease-in-out;
+  cursor: pointer;
+}
+
+.lang__button:hover {
+  background-color: rgba(14, 24, 80, 0.1);
+}
