--- a/css/style.css
+++ b/css/style.css
@@ -443,3 +443,107 @@ html {
 .lang__button:hover {
   background-color: rgba(14, 24, 80, 0.1);
 }
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/* слайдер */
+
+.contents-title {
+  padding: 16px;
+  margin: 0;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: -0.2px;
+  text-transform: uppercase;
+  color: #7e7e82;
+  background: linear-gradient(90deg, #f8f8f8 0%, #ffffff 98.61%);
+}
+
+.brands {
+  overflow: hidden;
+}
+
+.brands__list {
+  padding: 16px;
+  margin: 0;
+  width: auto;
+  color: #666;
+  text-decoration: none;
+  list-style-type: none;
+}
+
+.brands__card {
+  cursor: pointer;
+  background: #ffffff;
+  border: 1px solid #eaeaea;
+  border-radius: 6px;
+  box-shadow: -2px 0px 4px rgba(69, 79, 126, 0.02), 16px 0px 52px rgba(14, 24, 80, 0.02);
+}
+
+@media (max-width: 768px) {
+  .brands__card {
+    width: 240px;
+  }
+}
+
+.brands__link {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 16px;
+  text-decoration: none;
+  color: #666;
+}
+
+.brands__link::after {
+  display: inline-block;
+  content: '';
+  border: 2px solid #ff3e79;
+  border-radius: 50%;
+  background-image: url(../img/dropdown.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 35px;
+  height: 35px;
+}
+
+.swiper-pagination {
+  position: relative;
+}
+
+@media (min-width: 768px) {
+  .brands__list {
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(50px, 1fr));
+    -moz-column-gap: 16px;
+    column-gap: 16px;
+    row-gap: 16px;
+  }
+}
+
+.more--margin {
+  margin-left: 22px;
+}
+
+.more--visible {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .more--visible {
+    display: block;
+  }
+
+  .brands__inner {
+    max-height: 190px;
+  }
+}
+
+.brands__inner--visible {
+  max-height: 100%;
+}
